<resources>
    <string name="app_name">get Order</string>
    <string name="Product">Product</string>
    <string name="Order">Order</string>
    <string name="ReportByDay">Report By Day</string>
    <string name="ReportByMonth">Report By Month</string>
    <string name="Waiting">Waiting</string>
    <string name="Report">Reports</string>
    <string name="NavHeaderText">nav header text</string>
    <string name="NavHeaderInfo">nav header info</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="waiting_dialog_title">waiting dialog title</string>
    <string name="product_dialog_title">Title</string>
    <string name="product_dialog_description">Description</string>
    <string name="product_dialog_sell">Sell Price</string>
    <string name="product_dialog_buy">Buy Price</string>
    <string name="product_dialog_discount">Discount</string>
    <string name="product_added">Product Added</string>
    <string name="product_changed">Product Changed</string>
    <string name="product_change_dialog_title">Change Product</string>
    <string name="product_add_dialog_title">Add Product</string>
    <string name="set_quantity_dialog_title">Set Quantity</string>
    <string name="quantity">Quantity</string>
    <string name="set_order_dialog_title">Add the Order</string>
    <string name="set_order_table_dialog">table Number</string>
    <string name="Ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set_order_submit_title">Submit</string>
    <string name="set_order_submit_dialog_message">Are you sure ?</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="order_table_num_dialog">number</string>
    <string name="profit_report_card">Profit</string>
    <string name="price_report_card">Price</string>
    <string name="quantity_report_card">quantity</string>

</resources>
