<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_product"
            android:title="@string/Product" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_product"
            android:title="@string/Order" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_product"
            android:title="@string/Waiting" />
    </group>

    <item android:title="@string/Report">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_product"
                android:title="@string/ReportByDay" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_product"
                android:title="@string/ReportByMonth" />
        </menu>
    </item>

</menu>