<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="30sp"
        android:layout_marginStart="30sp"
        android:inputType="textPersonName"
        android:hint="@string/product_dialog_title" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="30sp"
        android:layout_marginStart="30sp"
        android:inputType="textPersonName"

        android:hint="@string/product_dialog_description" />
    <EditText
        android:id="@+id/edtSellPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="30sp"
        android:layout_marginStart="30sp"
        android:inputType="number"
        android:hint="@string/product_dialog_sell" />

    <EditText
        android:id="@+id/edtBuyPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="30sp"
        android:layout_marginStart="30sp"
        android:inputType="number"
        android:hint="@string/product_dialog_buy" />

    <EditText
        android:id="@+id/edtDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginEnd="30sp"
        android:layout_marginStart="30sp"
        android:inputType="number"
        android:hint="@string/product_dialog_discount" />



</LinearLayout>